--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".Wizzard_New1" />
         <activity android:name=".Wizzard_New2" />
         <activity android:name=".Wizzard_NewOwnCloudConnection" />
+        <activity android:name=".Wizzard_NewFtpConnection" />
     </application>
 
 </manifest>
