--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
 
     buildTypes {
         debug {
+            testCoverageEnabled true
             applicationIdSuffix ".debug"
             minifyEnabled false
             useProguard false
@@ -25,6 +26,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     dexOptions {
         preDexLibraries true
     }
