Add AAPTOption for reproduceable builds
see: https://f-droid.org/en/docs/Reproducible_Builds/

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
         }
     }
 
+    aaptOptions {
+        cruncherEnabled = false     // reproduceable builds: handling png, https://f-droid.org/en/docs/Reproducible_Builds/
+    }
+
     testOptions {
         unitTests.returnDefaultValues = true
     }
